[package]
name = "httpfork"
version = "0.1.0"
authors = ["Nikita Lebedev <eazy-f@yandex.ru>"]

[lib]
name = "winhttplog"
crate-type = ["dylib"]

[dependencies]
  [dependencies.winapi]
    version = "0.3"
    features = [
      "processthreadsapi",
      "memoryapi",
      "errhandlingapi",
      "winbase"
    ]
detour = "0.6.0"
